# cpp_makefile_template

./: kill.bat  note.txt
cpp-gcovr/: Readme.md  coverage.example.cpp.html  coverage.html  example.cpp  program
cpp_10_10/: main.cpp  main.h
cpp_11_04/: main.cpp
cpp_11_05/: main.cpp
cpp_12_04/: main  main.h
cpp_13_03/: main.cpp  main.h
cpp_13_13/: main.cpp
cpp_13_14/: main.cpp
cpp_1_12/: hello.cpp
cpp_1_28/: input.txt
cpp_1_30/: main.cpp
cpp_1_33/: main.cpp
cpp_1_39/: main.cpp
cpp_4_05/: Makefile  main.cpp
cpp_4_11/: main.cpp
cpp_4_15/: main.cpp
cpp_4_22/: main.cpp
cpp_4_23/: main.cpp
cpp_5_07/: main.cpp
cpp_6_05/: main.cpp
cpp_6_07/: main.cpp
cpp_6_10/: main.cpp
cpp_7_04/: main.cpp
cpp_7_06/: main.cpp
cpp_7_08/: main.cpp  main.h
cpp_7_11/: main.h
cpp_8_12/: main.h
cpp_8_14/: main.cpp
cpp_8_28/: main.cpp
cpp_9_07/: main.cpp  main.h
cpp_9_10/: Shape.h  main.cpp  main.h
cpp_temp/: Makefile
cpp_temp/src/: program.cpp
helloword/: hello.c  hello.cpp  install.sh
make-template/: Makefile.cmn.mk  Makefile.rule_module.mk
make-template/test/: Makefile
multithread/: Makefile  hello.cpp
socket_multithreading/: CMakeLists.txt  README.md  main.cpp
socket_multithreading/debug/inc/: Debug.h
socket_multithreading/debug/src/: Debug.cpp
socket_multithreading/mutex/inc/: Mutex.h
socket_multithreading/mutex/src/: Mutex.cpp
socket_multithreading/socket/inc/: Socket.h
socket_multithreading/socket/src/: Socket.cpp
socket_multithreading/thread/inc/: Thread.h
socket_multithreading/thread/src/: Thread.cpp
(+55 files in other folders)
